# NARC

./: CLAUDE.md  CMakeLists.txt
engine/include/: i_audio.h  i_config.h  i_input.h  i_system.h  i_video.h  r_renderer.h
engine/src/audio/: i_audio.c
engine/src/input/: i_input.c
engine/src/platform/linux/: i_platform_linux.c
engine/src/platform/macos/: i_platform_macos.c
engine/src/platform/win32/: i_platform_win32.c
engine/src/renderer/: i_renderer.c  i_video.c
engine/src/system/: i_config.c  i_system.c
game/include/: g_defs.h  g_entity.h  g_game.h  g_level.h  g_main.h  g_pathfind.h  g_player.h  g_raycaster.h  g_weapon.h
game/src/: g_entity.c  g_game.c  g_level.c  g_main.c  g_pathfind.c  g_player.c  g_raycaster.c  g_weapon.c  main.c
